# VictronSolarDisplayEsp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.env  linux_c_cpp_properties.json  partitions.csv  sdkconfig  sdkconfig-release  windows_c_cpp_properties.json
JC3248W535EN/1-Demo/Demo_Arduino/: Must see for use.txt
JC3248W535EN/1-Demo/Demo_Arduino/DEMO_LVGL/: DEMO_LVGL.ino
JC3248W535EN/1-Demo/Demo_Arduino/DEMO_MJPEG/: DEMO_MJPEG.ino
JC3248W535EN/1-Demo/Demo_Arduino/DEMO_MP3/: DEMO_MP3.ino  pincfg.h
JC3248W535EN/1-Demo/Demo_Arduino/DEMO_PIC/: DEMO_PIC.ino
JC3248W535EN/3-Structure_Diagram/: Slot method 1 .dxf  Slot method 2.dxf
config/: sdkconfig.cmake  sdkconfig.h  sdkconfig.json
docs/: convert-framebuffer.py  framebuffer.raw
files/: index.html  style.css
main/: CMakeLists.txt  config_server.c  config_server.h  config_storage.c  config_storage.h  font_awesome_bolt_40.c  font_awesome_solar_panel_40.c  lv_conf.h  main.c  ui.c  ui.h  victron_ble.c  victron_ble.h
